tests/paczka1/fuzzy1/17806896.err
Error in line 1: A485 A50 32,8
Error in line 3: A485 A485 78,5
Error in line 8: v6A2 S593 -6,3
Error in line 4: 09y8qVJx S389 60,3
Error in line 7: A485 A50 89,6
Error in line 16: vjzSa3uvD A485 32,3
Error in line 2: v6A2 S593 94,5
Error in line 27: 4VVJ6JGeH7 S593 119,0
Error in line 29: EOqRTQRQ S389 23,4
